--- a/style/main.css
+++ b/style/main.css
@@ -327,6 +327,7 @@ hr {
     text-align: center;
     font-weight: bold;
     z-index: 10;
+    background-size: contain;
     font-size: 55px; }
   .tile.tile-2 .tile-inner {
     background-image: url("346E5A6F-A340-4F55-8581-A005F100633E.jpeg");
