--- a/style/main.css
+++ b/style/main.css
@@ -348,8 +348,7 @@ hr {
     background-image: url("EE7B3D50-BC79-4FC1-BD5D-7EEF5F25BE9E.jpeg");
     }
   .tile.tile-128 .tile-inner {
-    background-image: url("5FDB53E7-12F4-4CA0-859D-8E04AC473D8B.jpeg");
-    color: #f9f6f2;
+    background-image: url("5FDB53E7-12F4-4CA0-859D-8E04AC473D8B.jpeg")
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
