--- a/style/main.css
+++ b/style/main.css
@@ -744,7 +744,8 @@ hr {
     transform: translate(202px, 202px); }
 
   .tile .tile-inner {
-    font-size: 35px; }
+    font-size: 35px; 
+    color: #FFFFFF}
 
   .game-message p {
     font-size: 30px !important;
