--- a/style/main.css
+++ b/style/main.css
@@ -745,7 +745,7 @@ hr {
 
   .tile .tile-inner {
     font-size: 35px; 
-    color: #FFFFFF}
+    color: #FFFFFF;}
 
   .game-message p {
     font-size: 30px !important;
