--- a/style/main.css
+++ b/style/main.css
@@ -329,7 +329,7 @@ hr {
     z-index: 10;
     background-size: contain;
     font-size: 0px; }
-  .tile.tile-2 .tile-inner {
+  .tile.tile-2 {
     background-image: url("346E5A6F-A340-4F55-8581-A005F100633E.jpeg");
     }
   .tile.tile-4 .tile-inner {
