--- a/style/James_People/main.css
+++ b/style/James_People/main.css
@@ -331,33 +331,33 @@ hr {
   .tile.tile-2 .tile-inner {
     background: #eee4da;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); 
-    background-image: url("2");}
+    background-image: url("2.jpeg");}
   .tile.tile-4 .tile-inner {
     background: #ede0c8;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); 
-    background-image: url("4"); }
+    background-image: url("4.jpeg"); }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
     background: #f2b179; 
-    background-image: url("8"); }
+    background-image: url("8.jpeg"); }
   .tile.tile-16 .tile-inner {
     color: #f9f6f2;
     background: #f59563; 
-    background-image: url("16"); }
+    background-image: url("16.jpeg"); }
   .tile.tile-32 .tile-inner {
     color: #f9f6f2;
     background: #f67c5f;  
-    background-image: url("32"); }
+    background-image: url("32.jpeg"); }
   .tile.tile-64 .tile-inner {
     color: #f9f6f2;
     background: #f65e3b;  
-    background-image: url("64"); }
+    background-image: url("64.jpeg"); }
   .tile.tile-128 .tile-inner {
     color: #f9f6f2;
     background: #edcf72;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 45px;  
-    background-image: url("128"); }
+    background-image: url("128.jpeg"); }
     @media screen and (max-width: 520px) {
       .tile.tile-128 .tile-inner {
         font-size: 25px; } }
@@ -366,7 +366,7 @@ hr {
     background: #edcc61;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
     font-size: 45px;  
-    background-image: url("256"); }
+    background-image: url("256.jpeg"); }
     @media screen and (max-width: 520px) {
       .tile.tile-256 .tile-inner {
         font-size: 25px; } }
@@ -375,7 +375,7 @@ hr {
     background: #edc850;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 45px;  
-    background-image: url("512"); }
+    background-image: url("512.jpeg"); }
     @media screen and (max-width: 520px) {
       .tile.tile-512 .tile-inner {
         font-size: 25px; } }
@@ -384,7 +384,7 @@ hr {
     background: #edc53f;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 35px;  
-    background-image: url("1024"); }
+    background-image: url("1024.jpeg"); }
     @media screen and (max-width: 520px) {
       .tile.tile-1024 .tile-inner {
         font-size: 15px; } }
@@ -393,7 +393,7 @@ hr {
     background: #edc22e;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 35px;  
-    background-image: url("2048"); }
+    background-image: url("2048.jpeg"); }
     @media screen and (max-width: 520px) {
       .tile.tile-2048 .tile-inner {
         font-size: 15px; } }
