--- a/style/main.css
+++ b/style/main.css
@@ -95,6 +95,10 @@ h1.title {
 .best-container:after {
   content: "Best"; }
 
+#btn-container p {
+  line-height: 45px;
+}
+
 p {
   margin-top: 0;
   margin-bottom: 10px;
@@ -485,11 +489,12 @@ hr {
   text-decoration: none;
   color: #f9f6f2;
   height: 40px;
-  line-height: 42px;
+  line-height: 40px;
   display: block;
   text-align: center;
   font-weight: bold;
-  float: right; }
+  float: right;
+  }
 
 .game-explanation {
   margin-top: 50px; }
