--- a/style/James_People/style.css
+++ b/style/James_People/style.css
@@ -1,8 +1,10 @@
 .tile.tile-2 .tile-inner {
+    color: #f9f6f2;
     background-image: url("2.jpeg");
     background-size: contain;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
+    color: #f9f6f2;
     background-image: url("4.jpeg");
     background-size: contain;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
