--- a/style/states/style.css
+++ b/style/states/style.css
@@ -5,20 +5,20 @@
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
     color: #f9f6f2;
-    background-image: url("4.jpeg");
+    background-image: url("4.jpg");
     background-size: contain;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
-    background-image: url("8.jpeg");
+    background-image: url("8.jpg");
     background-size: contain; }
   .tile.tile-16 .tile-inner {
     color: #f9f6f2;
-    background-image: url("16.jpeg"); 
+    background-image: url("16.jpg"); 
     background-size: contain; }
   .tile.tile-32 .tile-inner {
     color: #f9f6f2;
-    background-image: url("32.jpeg"); 
+    background-image: url("32.jpg"); 
     background-size: contain; }
   .tile.tile-64 .tile-inner {
     color: #f9f6f2;
@@ -26,7 +26,7 @@
     background-size: contain; }
   .tile.tile-128 .tile-inner {
     color: #f9f6f2;
-    background-image: url("128.jpeg");
+    background-image: url("128.jpg");
     background-size: contain;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 45px; }
@@ -44,7 +44,7 @@
         font-size: 25px; } }
   .tile.tile-512 .tile-inner {
     color: #f9f6f2;
-    background-image: url("512.jpeg");
+    background-image: url("512.jpg");
     background-size: contain;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 45px; }
@@ -53,7 +53,7 @@
         font-size: 25px; } }
   .tile.tile-1024 .tile-inner {
     color: #f9f6f2;
-    background-image: url("1024.jpeg");
+    background-image: url("1024.jpg");
     background-size: contain;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 35px; }
